--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>devPratyush Mishra - From kal ki baten  </title>
+    <title>Pratyush -The podcaster  </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <meta name="description" content="dev Pratyush mishra pratyush21706 from jhajha and Kal ki baten podcast.">
+    <meta name="description" content="devpratyush pratyush21706 from jhajha and Kal ki baten podcast.">
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700" rel="stylesheet">
 
