--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <h1 class="bold-text">About</h1>
                 <div class="p-5">
                   <h2 class="mb-5">Hey Siri! Define Pratyush...</h2>
-                  <p>Pratyush can be defined as a Forever LEARNER who just loves to fiddle around with computers and make id to some random stuff, which I dont know why many people call Programming .</p>
+                  <p>Pratyush can be defined as a Forever LEARNER who just loves to fiddle around with computers and make them to some random stuff, which I dont know why many people call Programming .</p>
                   <p><a href="#">Lets get social</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
                     <li><a href="https://www.instagram.com/dev.pratyush.mishra/"><span class="icon-instagram"></span></a></li>
