--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <meta name="description" content="devpratyush pratyush21706 from jhajha and Kal ki baten podcast.">
+    <meta name="description" content="Hey its Pratyush mishra(pratyush21706) from the podcast kal ki baten.">
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700" rel="stylesheet">
 
