--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
               <span>Things I like to</span>
-              <h2>Gets my creative head into</h2>
+              <h2>try my hands in</h2>
             </div>
           </div>
           <div class="row no-gutters">
