--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Pratyush - The Passionate(devpratyush)</title>
+    <title>Pratyush - From kal ki baten  </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <meta name="description" content="Hey its Pratyush mishra(pratyush21706) from the podcast kal ki baten.">
+    <meta name="description" content="dev Pratyush from jhajha and Kal ki baten podcast.">
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700" rel="stylesheet">
 
@@ -97,7 +97,7 @@
             <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
               <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                 <p><a href="#" class="scroll">I am a </a></p>
-                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">Web Developer</h1>
+                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">dumb ass</h1>
               </div>
             </div>
           </div>
@@ -116,7 +116,7 @@
                 <h1 class="bold-text">About</h1>
                 <div class="p-5">
                   <h2 class="mb-5">Hey Siri! Define Pratyush...</h2>
-                  <p>Pratyush can be defined as a Forever LEARNER who just loves to fiddle around with computers and make them to some random stuff, which I dont know why many people call Programming .</p>
+                  <p>Pratyush can be defined as a Forever LEARNER who just loves to fiddle around with computers and make id to some random stuff, which I dont know why many people call Programming .</p>
                   <p><a href="#">Lets get social</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
                     <li><a href="https://www.instagram.com/dev.pratyush.mishra/"><span class="icon-instagram"></span></a></li>
@@ -182,7 +182,7 @@
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
               <span>Things I like to</span>
-              <h2>Try my hands in</h2>
+              <h2>Gets my hands dirty in</h2>
             </div>
           </div>
           <div class="row no-gutters">
