--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                   <p>Pratyush can be defined as a Forever LEARNER who just loves to fiddle around with computers and make it to some random stuff, which I dont know why many people call Programming .</p>
                   <p><a href="#">Lets get social</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
-                    <li><a href="https://www.instagram.com/dev.pratyush.mishra/"><span class="icon-instagram"></span></a></li>
+                    <li><a href="https://www.instagram.com/dev.pratyush_/"><span class="icon-instagram"></span></a></li>
                     <li><a href="https://www.linkedin.com/in/pratyush-mishra-048046210/"><span class="icon-linkedin"></span></a></li>
                     <li><a href="https://twitter.com/DevPratyush1"><span class="icon-twitter"></span></a></li>
                   </ul>
@@ -187,16 +187,16 @@
           </div>
           <div class="row no-gutters">
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="https://www.instagram.com/dev.pratyush.mishra/" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/art1.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="https://www.instagram.com/dev.pratyush_/" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/art1.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text">
               <h4 class="subheading">Photography</h4>
-              <h2 class="heading"><a href="portfolio-single.html">Caputring moments worth sharing!</a></h2>
+              <h2 class="heading"><a href="#">Caputring moments worth sharing!</a></h2>
               <p>It's a human tendancy to capture the best moments of their lives and I do the same with just a small tweak <b>"I make moments to capture them"</b></b></p>
-              <p><a href="https://www.instagram.com/dev.pratyush.mishra/">Explore more</a></p>
+              <p><a href="https://www.instagram.com/dev.pratyush_/">Explore more</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
@@ -213,20 +213,20 @@
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-3.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="#" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-3.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text">
               <h4 class="subheading">Web Design</h4>
-              <h2 class="heading"><a href="portfolio-single.html">Designing COOL websites</a></h2>
+              <h2 class="heading"><a href="#">Designing COOL websites</a></h2>
               <p>In this not so small time span of 2 years of Web developement I have done quite a few commercial projects but my main focus lies in<b> imperfect projects which gives me happiness </b>and a ton of experience.</p>
               <p><a href="#">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/art6.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="#" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/art6.png'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
@@ -239,7 +239,7 @@
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/art5.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="#" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/art5.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
@@ -274,7 +274,7 @@
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
-                  <li><a href="https://www.instagram.com/dev.pratyush.mishra/"><span class="icon-instagram"></span></a></li>
+                  <li><a href="https://www.instagram.com/dev.pratyush_/"><span class="icon-instagram"></span></a></li>
                     <li><a href="https://www.linkedin.com/in/pratyush-mishra-048046210/"><span class="icon-linkedin"></span></a></li>
                     <li><a href="https://twitter.com/DevPratyush1"><span class="icon-twitter"></span></a></li>
                 </ul>
